--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     		<p style="font-size: 30px; text-align: center;">Los gatos son conocidos por ser independientes y curiosos. Son excelentes cazadores y tienen habilidades de sigilo impresionantes. A pesar de su reputación de independencia, los gatos pueden formar lazos fuertes con sus dueños y disfrutar de la compañía humana.</p>
     		<p style="font-size: 30px; text-align: center;">El comportamiento felino está influenciado por una combinación de instintos naturales y experiencia individual. Los gatos son territoriales por naturaleza y a menudo marcarán su territorio con feromonas para establecer su dominio. También son criaturas de hábitos, prefiriendo rutinas consistentes en su entorno.</p>
 		<center>
-    		<img src="https://t2.ea.ltmcdn.com/es/posts/8/4/1/el_lenguaje_corporal_de_los_gatos_3148_orig.jpg;" width="840" height="480">
+    		<img src="https://t2.ea.ltmcdn.com/es/posts/8/4/1/el_lenguaje_corporal_de_los_gatos_3148_orig.jpg" width="840" height="480">
 		</center>
 	</section>
 
@@ -91,7 +91,7 @@
     		<p style="font-size: 30px; text-align: center;">El persa es famoso por su pelaje largo y denso, su cara aplanada y su naturaleza tranquila. Requiere cuidados regulares del pelaje para evitar enredos y enmarañados.</p>
     		<p style="font-size: 30px; text-align: center;">El maine coon es una de las razas de gatos más grandes y se caracteriza por su pelaje denso y su cola larga y peluda. Son conocidos por ser amigables, inteligentes y adaptables.</p>
 		<center>
-    		<img src="https://content.elmueble.com/medio/2023/04/15/razas-de-gatos_c749e3d2_230415100439_1200x630.jpg;" width="840" height="480">
+    		<img src="https://content.elmueble.com/medio/2023/04/15/razas-de-gatos_c749e3d2_230415100439_1200x630.jpg" width="840" height="480">
 		</center>
 	</section>
 
@@ -102,7 +102,7 @@
     		<p style="font-size: 30px; text-align: center;">Los chequeos veterinarios regulares son fundamentales para detectar y prevenir problemas de salud antes de que se vuelvan graves. Además de las vacunas y desparasitaciones, los gatos deben ser esterilizados o castrados para prevenir la reproducción no deseada y mejorar su salud a largo plazo.</p>
    		 <p style="font-size: 30px; text-align: center;">Los gatos necesitan ejercicio diario para mantenerse en forma y evitar el aburrimiento. Juegos interactivos, juguetes y rascadores pueden ayudar a satisfacer sus necesidades de actividad física y mental.</p>
 		<center>
-   		 <img src="https://gestion.portalbiesa.com/redaccio/arxius/imatges/201905/1200_1557225141blog_post_cuidados-basicos-gatos_2.jpg;" width="840" height="480">
+   		 <img src="https://gestion.portalbiesa.com/redaccio/arxius/imatges/201905/1200_1557225141blog_post_cuidados-basicos-gatos_2.jpg" width="840" height="480">
 		</center>
 	</section>
     </body>
